<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeWholeLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_gradient"
    tools:context=".Register">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewRegisterLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_wrapHeight="1657"
        tools:layout_conversion_wrapWidth="974">

        <RelativeLayout
            android:id="@+id/relativeBigLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:id="@+id/linearTopLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/GreenAppColor"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgLogin"
                    android:layout_width="280dp"
                    android:layout_height="280dp"
                    android:layout_marginTop="20dp"
                    android:padding="0dp"
                    android:src="@drawable/transparentlogologingradient2" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageViewSquareLogin"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/linearTopLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-10dp"
                android:rotation="45"
                android:src="@drawable/square" />

            <RelativeLayout
                android:id="@+id/relativeLayoutUsernameLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewSquareLogin"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/imgView_userIconLogin"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/GreenAppColor"
                    android:padding="8dp"
                    android:src="@drawable/person_add_icon" />

                <EditText
                    android:id="@+id/editTextUsernameLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_userIconLogin"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_userIconLogin"
                    android:background="@color/editTextBG"
                    android:hint="@string/hint_name"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayoutUsernameLogin"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/imgView_passwordIconLogin"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/GreenAppColor"
                    android:padding="8dp"
                    android:src="@drawable/lock_icon" />

                <EditText
                    android:id="@+id/editTextPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imgView_passwordIconLogin"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/imgView_passwordIconLogin"
                    android:background="@color/editTextBG"
                    android:hint="@string/hint_password"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutForgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayoutPasswordLogin"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textColor="@android:color/darker_gray" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayoutForgot"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp">

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/GreenAppColor"
                    android:fontFamily="sans-serif"
                    android:text="@string/text_logIn"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/buttonLogin"
                    android:layout_centerHorizontal="true"
                    android:text="@string/prompt_create_account"
                    android:textColor="@color/GreenAppColor" />

            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>